# zmq-messaging

./: .gitmodules  CMakeLists.txt
include/goliath/: CMakeLists.txt  zmq-messaging.h  zmq_messaging.h
include/goliath/zmq-messaging/: zmq_publisher.h  zmq_subscriber.h
src/: CMakeLists.txt  zmq_io.cpp  zmq_publisher.cpp  zmq_subscriber.cpp
